feat(api/tasklist): add route for adding task to tasklist
